# Engine

./: .gitignore  CMakeLists.txt  Import.cmake  README.md  vcpkg.json
include/: Animation.h  Camera.h  Camera2D.h  Camera3D.h  Engine.h  File.h  Font.h  HUD.h  Input.h  RenderTarget.h  Serializable.h  Settings.h  Shader.h  Texture.h  Window.h
include/io/: Filesystem.h
include/network/: Buffer.h  LEB128.h  SocketClient.h  SocketServer.h
src/: Animation.cpp  Camera.cpp  Camera2D.cpp  Camera3D.cpp  File.cpp  Font.cpp  HUD.cpp  Input.cpp  RenderTarget.cpp  Settings.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/io/: Filesystem.cpp
src/network/: Buffer.cpp  LEB128.cpp  SocketClient.cpp  SocketServer.cpp
